--- a/HolidayBooking.Tests/HolidayBooking.Tests.csproj
+++ b/HolidayBooking.Tests/HolidayBooking.Tests.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HolidayBooking\HolidayBooking.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
