[+] Added tests for loading JSON data from files.`

--- a/HolidayBooking.Tests/HolidayBooking.Tests.csproj
+++ b/HolidayBooking.Tests/HolidayBooking.Tests.csproj
@@ -26,4 +26,13 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Flights_Data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Hotel_Data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
